# emeth-agent

./: .gitignore  README.md  pyproject.toml  run.py
corpus/: eu_ai_act.json
emeth_agent/: __init__.py  classify.py  corpus.py  generate.py  signing.py  terms.py  timestamp.py
fixtures/: acme_test.json  hrtech_deployer.json
tests/: test_boundary.py  test_deployer_gates.py  test_signing.py  test_timestamp_integration.py
