[project]
name = "emeth-agent"
version = "0.2.0"
description = "Rule-based generator of signed, timestamped boundary-attestation documents for the EU AI Act."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Lamar B. Shucrani" }]
keywords = ["eu-ai-act", "verifiable-credentials", "rfc3161", "attestation", "regtech"]
dependencies = [
    "cryptography>=42",
    "asn1crypto>=1.5",
    "rfc8785>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emeth_agent"]
